--- a/style.css
+++ b/style.css
@@ -1,3 +1,76 @@
-.hide-section{
+body {
+    background-color: #f8f8ff;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    font-size: 4rem;
+    color: #000;
+    margin-bottom: 4rem;
+}
+
+h2 {
+    font-size: 3rem;
+    margin-bottom: 3rem;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 75rem;
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-center{
+    justify-content: center;
+    align-items: center;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.hide-section {
     display: none;
+}
+
+.button {
+    font-size: 2rem;
+    padding: 2rems 0;
+    width: 25rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color: #fff;
+    background-color: blue;
+    border-radius: 50px;
+}
+
+.button:hover {
+    cursor: pointer;
+    transition: transform 150ms;
+    transform: scale(1.05);
+}
+
+.btn[disabled]:hover {
+    cursor: not-allowed;
+    transform: none;
 }
