--- a/scoreBoard.css
+++ b/scoreBoard.css
@@ -1,3 +1,4 @@
+/* scoreBoard.html main styling start */
 body {
     color: #000;
 }
@@ -11,3 +12,4 @@ body {
     font-size: 2rem;
     margin-bottom: 0.5rem;
 }
+/* scoreBoard.html main styling End */
