--- a/quiz.css
+++ b/quiz.css
@@ -1,3 +1,4 @@
+/* quiz.html main styling start */
 .quiz-choice-container {
     display: flex;
     margin-bottom: .5rem;
@@ -63,14 +64,18 @@
     border-radius: 50px;
 }
 
+/* quiz.html tablet styling */
 @media screen and (max-width: 768px) {
     .quiz-choice-container {
         min-width: 35rem;
     }
 }
 
+/* quiz.html Mobile styling */
 @media screen and (max-width: 501px) {
     .quiz-choice-container {
         min-width: 20rem;
     }
 }
+
+/* quiz.html main styling End */
