--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* main css Start*/
 body {
     background-color: #f8f8ff;
 }
@@ -82,6 +83,9 @@ li {
     cursor: not-allowed;
     transform: none;
 }
+/* main css End*/
+
+/* end.html css Start*/
 
 .end-form-container {
     width: 100%;
@@ -102,3 +106,5 @@ input {
     font-size: 1.5rem;
     border-radius: 50px;
 }
+
+/* end.html css End*/
